Add comprehensive CLI documentation and examples
Co-authored-by: gliptak <50109+gliptak@users.noreply.github.com>